Додано маршрути для перегляду користувачами доступних для запису днів та годин. Оновлено swagger
