# swagger.json
@@ -1,20 +1,21 @@
 {
     "openapi": "3.0.0",
     "info": {
-      "title": "User and Admin Authentication API",
-      "description": "API для реєстрації, логіну та адміністрування користувачів і доступних днів та годин для запису.",
+      "title": "API для пірсингу",
+      "description": "API для реєстрації користувачів, управління доступними днями та годинами для запису на послуги пірсингу.",
       "version": "1.0.0"
     },
     "servers": [
       {
-        "url": "http://localhost:3000",
-        "description": "Локальний сервер"
+        "url": "http://localhost:3000"
       }
     ],
     "paths": {
       "/register": {
         "post": {
           "summary": "Реєстрація нового користувача/адміністратора",
+          "operationId": "register",
+          "tags": ["Auth"],
           "requestBody": {
             "required": true,
             "content": {
@@ -32,6 +33,7 @@
                     },
                     "role": {
                       "type": "string",
+                      "enum": ["user", "admin"],
                       "default": "user"
                     }
                   },
@@ -45,10 +47,10 @@
               "description": "Користувача зареєстровано"
             },
             "400": {
-              "description": "Невірні дані"
+              "description": "Невірний формат запиту"
             },
             "500": {
-              "description": "Помилка серверу"
+              "description": "Виникла помилка на сервері"
             }
           }
         }
@@ -56,6 +58,8 @@
       "/login": {
         "post": {
           "summary": "Логін користувача/адміністратора",
+          "operationId": "login",
+          "tags": ["Auth"],
           "requestBody": {
             "required": true,
             "content": {
@@ -77,7 +81,7 @@
           },
           "responses": {
             "200": {
-              "description": "Токен успішно отримано",
+              "description": "Успішний логін",
               "content": {
                 "application/json": {
                   "schema": {
@@ -95,7 +99,7 @@
               "description": "Неправильне ім'я користувача або пароль"
             },
             "500": {
-              "description": "Помилка серверу"
+              "description": "Виникла помилка на сервері"
             }
           }
         }
@@ -103,16 +107,23 @@
       "/logout": {
         "post": {
           "summary": "Логаут користувача/адміністратора",
+          "operationId": "logout",
+          "tags": ["Auth"],
           "responses": {
             "200": {
-              "description": "Успішний вихід із системи"
+              "description": "Успішний вихід з системи"
+            },
+            "500": {
+              "description": "Виникла помилка на сервері"
             }
           }
         }
       },
       "/admin/free_days": {
         "post": {
-          "summary": "Додавання доступних днів для запису (для адміністраторів)",
+          "summary": "Додавання доступних днів для запису (тільки для адміністраторів)",
+          "operationId": "addFreeDays",
+          "tags": ["Admin"],
           "security": [
             {
               "bearerAuth": []
@@ -143,20 +154,22 @@
               "description": "День додано"
             },
             "400": {
-              "description": "Невірні дані"
+              "description": "Не заповнені необхідні поля"
             },
             "403": {
-              "description": "Доступ заборонено"
+              "description": "Недостатньо прав для виконання"
             },
             "500": {
-              "description": "Помилка серверу"
+              "description": "Виникла помилка на сервері"
             }
           }
         }
       },
       "/admin/free_hours": {
         "post": {
-          "summary": "Додавання доступних годин в день для запису (для адміністраторів)",
+          "summary": "Додавання доступних годин для запису (тільки для адміністраторів)",
+          "operationId": "addFreeHours",
+          "tags": ["Admin"],
           "security": [
             {
               "bearerAuth": []
@@ -191,16 +204,101 @@
               "description": "Година додана"
             },
             "400": {
-              "description": "Невірні дані"
+              "description": "Не заповнені необхідні поля"
             },
             "404": {
-              "description": "Цей день не знайдений"
+              "description": "День не знайдений"
             },
             "403": {
-              "description": "Доступ заборонено"
+              "description": "Недостатньо прав для виконання"
             },
             "500": {
-              "description": "Помилка серверу"
+              "description": "Виникла помилка на сервері"
+            }
+          }
+        }
+      },
+      "/free_days": {
+        "get": {
+          "summary": "Перегляд доступних днів для запису",
+          "operationId": "getFreeDays",
+          "tags": ["User"],
+          "security": [
+            {
+              "bearerAuth": []
+            }
+          ],
+          "responses": {
+            "200": {
+              "description": "Перелік доступних днів",
+              "content": {
+                "application/json": {
+                  "schema": {
+                    "type": "array",
+                    "items": {
+                      "type": "object",
+                      "properties": {
+                        "id": {
+                          "type": "integer"
+                        },
+                        "date": {
+                          "type": "string",
+                          "format": "date"
+                        },
+                        "is_available": {
+                          "type": "boolean"
+                        }
+                      }
+                    }
+                  }
+                }
+              }
+            },
+            "404": {
+              "description": "Немає доступних днів"
+            },
+            "500": {
+              "description": "Виникла помилка на сервері"
+            }
+          }
+        }
+      },
+      "/free_hours": {
+        "get": {
+          "summary": "Перегляд доступних годин для запису",
+          "operationId": "getFreeHours",
+          "tags": ["User"],
+          "responses": {
+            "200": {
+              "description": "Перелік доступних годин",
+              "content": {
+                "application/json": {
+                  "schema": {
+                    "type": "array",
+                    "items": {
+                      "type": "object",
+                      "properties": {
+                        "id": {
+                          "type": "integer"
+                        },
+                        "free_day_id": {
+                          "type": "integer"
+                        },
+                        "time": {
+                          "type": "string",
+                          "format": "time"
+                        },
+                        "is_available": {
+                          "type": "boolean"
+                        }
+                      }
+                    }
+                  }
+                }
+              }
+            },
+            "500": {
+              "description": "Виникла помилка на сервері"
             }
           }
         }
